@@ -19,8 +19,10 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 
-import java.util.Collections;
+import java.lang.reflect.Type;
+import java.util.ArrayList;
 import java.util.List;
 
 @ExtendWith(MockitoExtension.class)
@@ -50,41 +52,62 @@ class OrderServiceTest {
     @InjectMocks
     private OrderServiceImpl orderService;
 
+    private Page<Order> buildOrderPage(Pageable pageable, String orderId) {
+        Order order = new Order();
+        order.setOrderId(orderId);
+        return new PageImpl<>(List.of(order), pageable, 1);
+    }
+
+    private void mockOrderPageCommon(Page<Order> orderPage, String orderId) {
+        OrderDto orderDto = new OrderDto();
+        OrderEntry orderEntry = new OrderEntry();
+        List<OrderEntry> entries = List.of(orderEntry);
+        OrderEntryDto entryDto = new OrderEntryDto();
+        List<OrderEntryDto> entryDtos = List.of(entryDto);
+
+        Mockito.when(modelMapper.map(orderPage.getContent().get(0), OrderDto.class)).thenReturn(orderDto);
+        Mockito.when(orderEntryRepository.findByOrderId(orderId)).thenReturn(entries);
+        Mockito.when(modelMapper.map(Mockito.eq(entries), Mockito.any(Type.class))).thenReturn(entryDtos);
+    }
+
+    private void assertWsDto(WsDto<OrderDto> response) {
+        Assertions.assertEquals(1, response.getDtoList().size());
+        Assertions.assertEquals(1, response.getTotalRecords());
+        Assertions.assertEquals(1, response.getTotalPages());
+        Assertions.assertEquals(50, response.getSizePerPage());
+        Assertions.assertEquals(0, response.getPage());
+    }
+
     @Test
     void placeOrderTest() {
-        String cartIdentifier = "CART-01";
+        String cartId = "CART01";
         String paymentMode = "CASH";
 
         Cart cart = new Cart();
         CartEntry cartEntry = new CartEntry();
         List<CartEntry> cartEntries = List.of(cartEntry);
 
+        Order order = new Order();
+        OrderEntry orderEntry = new OrderEntry();
         OrderDto orderDto = new OrderDto();
         OrderEntryDto orderEntryDto = new OrderEntryDto();
         List<OrderEntryDto> orderEntryDtos = List.of(orderEntryDto);
 
-        Mockito.when(cartRepository.findByIdentifier(cartIdentifier)).thenReturn(cart);
-        Mockito.when(cartEntryRepository.findByCart(cartIdentifier)).thenReturn(cartEntries);
+        Mockito.when(cartRepository.findByIdentifier(cartId)).thenReturn(cart);
+        Mockito.when(cartEntryRepository.findByCart(cartId)).thenReturn(cartEntries);
+        Mockito.when(modelMapper.map(cart, Order.class)).thenReturn(order);
+        Mockito.when(orderRepository.save(Mockito.any(Order.class))).thenReturn(order);
+        Mockito.when(modelMapper.map(cartEntry, OrderEntry.class)).thenReturn(orderEntry);
+        Mockito.when(orderEntryRepository.saveAll(Mockito.anyList())).thenReturn(new ArrayList<>());
+        Mockito.when(modelMapper.map(order, OrderDto.class)).thenReturn(orderDto);
+        Mockito.when(modelMapper.map(Mockito.anyList(), Mockito.any(Type.class))).thenReturn(orderEntryDtos);
 
-        Mockito.when(modelMapper.map(Mockito.any(Cart.class), Mockito.eq(Order.class))).thenReturn(new Order());
-        Mockito.when(modelMapper.map(Mockito.any(CartEntry.class), Mockito.eq(OrderEntry.class))).thenReturn(new OrderEntry());
-
-        Mockito.when(orderRepository.save(Mockito.any(Order.class))).thenAnswer(invocation -> invocation.getArgument(0));
-        Mockito.when(orderEntryRepository.saveAll(Mockito.anyList())).thenAnswer(invocation -> invocation.getArgument(0));
-
-        Mockito.doReturn(true).when(cartEntryService).deleteAllByCart(cartIdentifier);
-
-        Mockito.doAnswer(invocation -> null).when(cartService).recalculate(cartIdentifier);
-
-        Mockito.when(modelMapper.map(Mockito.any(Order.class), Mockito.eq(OrderDto.class))).thenReturn(orderDto);
-        Mockito.when(modelMapper.map(Mockito.anyList(), Mockito.any(java.lang.reflect.Type.class))).thenReturn(orderEntryDtos);
-
-        OrderDto response = orderService.placeOrder(cartIdentifier, paymentMode);
+        OrderDto response = orderService.placeOrder(cartId, paymentMode);
 
         Assertions.assertNotNull(response);
         Assertions.assertEquals(orderEntryDtos, response.getEntryDtoList());
-        Mockito.verify(cartEntryService).deleteAllByCart(cartIdentifier);
-        Mockito.verify(cartService).recalculate(cartIdentifier);
+        Mockito.verify(cartEntryService, Mockito.times(1)).deleteAllByCart(cartId);
+        Mockito.verify(cartService, Mockito.times(1)).recalculate(cartId);
     }
 
     @Test
@@ -94,17 +117,16 @@ class OrderServiceTest {
         order.setOrderId(orderId);
         List<Order> orders = List.of(order);
 
-        OrderEntry entry = new OrderEntry();
-        List<OrderEntry> entries = List.of(entry);
-
         OrderDto orderDto = new OrderDto();
+        OrderEntry orderEntry = new OrderEntry();
+        List<OrderEntry> entries = List.of(orderEntry);
         OrderEntryDto entryDto = new OrderEntryDto();
         List<OrderEntryDto> entryDtos = List.of(entryDto);
 
         Mockito.when(orderRepository.findByOrderId(orderId)).thenReturn(orders);
         Mockito.when(modelMapper.map(order, OrderDto.class)).thenReturn(orderDto);
         Mockito.when(orderEntryRepository.findByOrderId(orderId)).thenReturn(entries);
-        Mockito.when(modelMapper.map(Mockito.eq(entries), Mockito.any(java.lang.reflect.Type.class))).thenReturn(entryDtos);
+        Mockito.when(modelMapper.map(Mockito.eq(entries), Mockito.any(Type.class))).thenReturn(entryDtos);
 
         OrderDto response = orderService.findByOrderId(orderId);
 
@@ -113,9 +135,9 @@ class OrderServiceTest {
     }
 
     @Test
-    void findByOrderIdTestNotFound() {
-        String orderId = "ORD-INVALID";
-        Mockito.when(orderRepository.findByOrderId(orderId)).thenReturn(Collections.emptyList());
+    void findByOrderIdTestFailure() {
+        String orderId = "ORD-01";
+        Mockito.when(orderRepository.findByOrderId(orderId)).thenReturn(List.of());
 
         OrderDto response = orderService.findByOrderId(orderId);
 
@@ -125,30 +147,27 @@ class OrderServiceTest {
     }
 
     @Test
-    void findAllTest() {
-        Pageable pageable = PageRequest.of(0, 10);
-        Order order = new Order();
-        order.setOrderId("ORD-01");
-        List<Order> orderList = List.of(order);
-        Page<Order> orderPage = new PageImpl<>(orderList, pageable, orderList.size());
-
-        OrderEntry entry = new OrderEntry();
-        List<OrderEntry> entries = List.of(entry);
-
-        OrderDto orderDto = new OrderDto();
-        OrderEntryDto entryDto = new OrderEntryDto();
-        List<OrderEntryDto> entryDtos = List.of(entryDto);
-
+    void findAllPageableTest() {
+        Pageable pageable = PageRequest.of(0, 50);
+        Page<Order> orderPage = buildOrderPage(pageable, "ORD-01");
+        mockOrderPageCommon(orderPage, "ORD-01");
         Mockito.when(orderRepository.findAllByOrderByOrderDateDesc(pageable)).thenReturn(orderPage);
-        Mockito.when(modelMapper.map(order, OrderDto.class)).thenReturn(orderDto);
-        Mockito.when(orderEntryRepository.findByOrderId("ORD-01")).thenReturn(entries);
-        Mockito.when(modelMapper.map(Mockito.eq(entries), Mockito.any(java.lang.reflect.Type.class))).thenReturn(entryDtos);
 
         WsDto<OrderDto> response = orderService.findAll(pageable);
 
-        Assertions.assertNotNull(response);
-        Assertions.assertEquals(1, response.getDtoList().size());
-        Assertions.assertEquals(entryDtos, response.getDtoList().get(0).getEntryDtoList());
-        Assertions.assertEquals(1L, response.getTotalRecords());
+        assertWsDto(response);
+    }
+
+    @Test
+    void findAllSpecificationTest() {
+        Pageable pageable = PageRequest.of(0, 50);
+        Specification<Order> specification = Mockito.mock(Specification.class);
+        Page<Order> orderPage = buildOrderPage(pageable, "ORD-01");
+        mockOrderPageCommon(orderPage, "ORD-01");
+        Mockito.when(orderRepository.findAll(specification, pageable)).thenReturn(orderPage);
+
+        WsDto<OrderDto> response = orderService.findAll(specification, pageable);
+
+        assertWsDto(response);
     }
 }
